# Yadic

./: .gitignore  LICENSE  Makefile  Readme.md  Yadic.cabal  hd  hd.hs  yadic.hs
